# md_utils

./: .gitignore  README.md  Session.vim  pyproject.toml  wip_ica.fif
mdu/: tfr_plot.py
mdu/data_io/: mne.py
mdu/io/: ao.py  bv.py
mdu/mne/: events.py
mdu/mne/ica/: ica_selection_app.py  test.py
mdu/mne/ica/assets/: ica_styles.css
mdu/plotly/: mne_plotting.py  stats.py  styling.py
mdu/plotly/mne_plotting_utils/: psd.py  shared.py  time_series.py  topoplot.py
src/mdu/: tfr_plot.py
src/mdu/cross_val/: chrono.py
src/mdu/data_io/: ao.py  bv.py  mne.py
src/mdu/forecast/: forecaster.py  simulate.py
src/mdu/mne/dbs/: stim_switch.py
src/mdu/mne/ica/: ica_selection_app.py  simple_app.py
src/mdu/mne/ica/ica_utils/: shared.py
src/mdu/plotly/: dist_plotting.py  ml.py  mne_plotting.py  stats.py  styling.py  time_series.py
src/mdu/plotly/mne_plotting_utils/: epoch_image.py  shared.py  topoplot.py
src/mdu/stats/: residuals.py
src/mdu/utils/: converters.py  logging.py
tests/: test_significance_indicators.py
