[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdu"
version = "0.0.2"
authors = [{name="Matthias Dold", email="matthias.dold@gmx.de"}]
description = "Default utilities I use for electrophys analysis"
readme ="README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "./"
]
filterwarnings = ["ignore:::.*fire.core"]

# Adding e.g. custom css 
[tool.setuptools.packages.find]
where = ["mdu"]

[tool.setuptools.package-data]
mne = ["*.css"]

